fixed benchmarks and Classfile API tests